# c_dynamic_string

./: .gitignore  CMakeLists.txt  Makefile  README.md
inc/: dynamic_string.h
src/: dynamic_string.c
test/: test_dynamic_string.c
